--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-opd-popup": "^1.1.21",
+    "ng2-popup": "^0.4.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
